### Migrate to toml (HEAD -> main)
>Thu, 27 Jun 2024 01:27:34 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Update packages version Fix bug when a solar system object is unknown. This will improve performances
>Wed, 26 Jun 2024 19:40:13 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Regenerate GML files (origin/main, origin/HEAD)
>Mon, 17 Jun 2024 21:58:04 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Update with recent version of IAU based on csvforwkt
>Mon, 17 Jun 2024 12:10:12 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Update AUTHORS.rst
>Mon, 17 Jun 2024 10:33:29 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: GitHub (noreply@github.com)

Updates contributors list


### Update GML based on csv2wkt release
>Fri, 14 Jun 2024 20:02:35 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Change service name Add on contributor
>Fri, 14 Jun 2024 12:31:47 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Pass arguments to dockerfile clening
>Thu, 13 Jun 2024 17:16:01 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Update README (origin/dashboard-patch-1, dashboard-patch-1)
>Thu, 13 Jun 2024 01:55:53 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)
